# filmfarm

./: README.md  integration.sh  pyproject.toml
filmfarm/: __init__.py  link.py  main.py  models.py  scrape.py
filmfarm/scrape/: __init__.py  omdb.py
tests/: conftest.py  test_links.py  test_models.py  test_scrape.py
tests/testdata/: tt13238346.omdb_processed.json  tt13238346.omdb_raw.json
tests/testdata/blobs/tt0013442/: imdb.json  tmdb.json
tests/testdata/blobs/tt0021814/: imdb.json  tmdb.json
tests/testdata/blobs/tt0051554/: imdb.json  tmdb.json
tests/testdata/blobs/tt0076759/: imdb.json  tmdb.json
tests/testdata/blobs/tt0080684/: imdb.json  tmdb.json
tests/testdata/blobs/tt0086190/: imdb.json  tmdb.json
tests/testdata/blobs/tt0103874/: imdb.json  tmdb.json
tests/testdata/blobs/tt0829150/: imdb.json  tmdb.json
